--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -104,8 +104,14 @@
           </div>
         </div>
       </div>
-    </div>
 
+      <div style="background-color: rgba(245, 245, 245, 0.725);">
+        <pre>
+          {{contactInfo}}
+        </pre>
+      </div>
+      
+    </div>
 
 
   </div>
