--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,7 @@
         <div class="phone-box">
           <span class="phone-icon">📱</span>
           <span class="phone-text">{{ phoneNumber }}</span>
+          <span class="phone-text">{{ allData.name }}</span>
         </div>
       </div>
 
