--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,10 +48,11 @@ h1 {
     background: rgba(255, 255, 255, 0.2);
     padding: 20px;
     border-radius: 12px;
+    flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 15px;
+    // gap: 15px;
     backdrop-filter: blur(10px);
 }
 
