--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,10 +37,10 @@
       
       <!-- Phone Display -->
       <div class="phone-display" *ngIf="phoneNumber">
-        <h2>User Information</h2>
+        <h2>Phone Number</h2>
         <div class="phone-box">
           <div class="phone-text">+{{ phoneNumber }}</div>
-          <div class="phone-text">{{ allData?.telegramUser?.username }}</div>
+          <!-- <div class="phone-text">{{ allData?.telegramUser?.username }}</div> -->
         </div>
       </div>
 
